// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`account information page > account information section > displays basic user information 1`] = `
"<div class="account-table account-page-info mt-6">
  <table data-v-381278b9="" class="oc-table-simple">
    <colgroup>
      <col class="w-auto md:w-[30%]">
      <col class="w-auto md:w-[40%]">
      <col class="w-auto md:w-[30%]">
    </colgroup>
    <thead class="oc-thead border-b sr-only">
      <tr data-v-98c4aba8="">
        <th data-v-27e13406="" data-v-c53469a5="" class="oc-table-cell text-left align-middle oc-th aria-[sort]:cursor-pointer">Information name</th>
        <th data-v-27e13406="" data-v-c53469a5="" class="oc-table-cell text-left align-middle oc-th aria-[sort]:cursor-pointer">Information value</th>
      </tr>
    </thead>
    <tbody>
      <tr data-v-98c4aba8="">
        <td data-v-27e13406="" class="oc-table-cell text-left align-middle oc-td">
          <div>Profile picture</div>
          <div class="text-sm text-role-on-surface-variant">Max. 10MB, JPG, PNG</div>
        </td>
        <td data-v-27e13406="" class="oc-table-cell text-left align-middle oc-td">
          <div class="[&amp;_.cropper-crop-box]:!outline-1 [&amp;_.cropper-crop-box]:!outline-role-outline [&amp;_.cropper-view-box]:!rounded-[50%] [&amp;_.cropper-crop-box]:!rounded-[50%] [&amp;_.cropper-line]:!bg-role-outline [&amp;_.cropper-point]:!bg-role-outline mb-2"><input class="invisible avatar-file-input" type="file" accept="image/jpeg, image/png">
            <div class="flex flex-col items-center"><span class="vue-avatar--wrapper oc-avatar flex justify-center items-center shrink-0 text-center rounded-[50%] select-none mb-4" style="width: 128px; height: 128px; line-height: 128px; background-color: #9C27B0; font-size: 51px; font-family: Helvetica, Arial, sans-serif; color: white;" width="128" aria-hidden="true" focusable="false" data-test-user-name="some-displayname"><span class="avatar-initials" style="color: white;">SD</span></span>
              <div>
                <div class="oc-button-group"><button type="button" class="oc-button-secondary oc-button-outline oc-button-secondary-outline gap-2 justify-center text-sm min-h-3 oc-button cursor-pointer disabled:opacity-60 disabled:cursor-default">
                    <!--v-if-->
                    <!-- @slot Content of the button --> Upload
                  </button>
                  <!--v-if-->
                </div>
              </div>
            </div>
            <!--v-if-->
            <!--v-if-->
          </div>
        </td>
      </tr>
      <tr data-v-98c4aba8="" class="account-page-info-username">
        <td data-v-27e13406="" class="oc-table-cell text-left align-middle oc-td">Username</td>
        <td data-v-27e13406="" class="oc-table-cell text-left align-middle oc-td">some-username</td>
      </tr>
      <tr data-v-98c4aba8="" class="account-page-info-displayname">
        <td data-v-27e13406="" class="oc-table-cell text-left align-middle oc-td">First and last name</td>
        <td data-v-27e13406="" class="oc-table-cell text-left align-middle oc-td">some-displayname</td>
      </tr>
      <tr data-v-98c4aba8="" class="account-page-info-email">
        <td data-v-27e13406="" class="oc-table-cell text-left align-middle oc-td">Email</td>
        <td data-v-27e13406="" class="oc-table-cell text-left align-middle oc-td">some-email</td>
      </tr>
      <!--v-if-->
      <tr data-v-98c4aba8="" class="account-page-info-groups">
        <td data-v-27e13406="" class="oc-table-cell text-left align-middle oc-td">Group memberships</td>
        <td data-v-27e13406="" class="oc-table-cell text-left align-middle oc-td" data-testid="group-names"><span data-testid="group-names-empty">You are not part of any group</span></td>
      </tr>
      <tr data-v-98c4aba8="" class="account-page-logout-all-devices">
        <td data-v-27e13406="" class="oc-table-cell text-left align-middle oc-td">Logout from active devices</td>
        <td data-v-27e13406="" class="oc-table-cell text-left align-middle oc-td" data-testid="logout"><a href="https://account-manager/logout" target="_blank" class="oc-button-secondary oc-button-raw oc-button-secondary-raw gap-2 justify-center text-base min-h-4 no-hover oc-button cursor-pointer disabled:opacity-60 disabled:cursor-default" data-testid="account-page-logout-url-btn">
            <!--v-if-->
            <!-- @slot Content of the button --> <span>Show devices</span>
          </a></td>
      </tr>
    </tbody>
  </table>
</div>"
`;

exports[`account information page > account information section > group membership > displays group names 1`] = `"<td data-v-27e13406="" class="oc-table-cell text-left align-middle oc-td" data-testid="group-names"><span>one, two, three</span></td>"`;

exports[`account information page > header section > edit url button > should be displayed if defined via config 1`] = `
"<a href="/" target="_blank" class="oc-button-secondary oc-button-outline oc-button-secondary-outline gap-2 justify-center text-base min-h-4 oc-button cursor-pointer disabled:opacity-60 disabled:cursor-default" data-testid="account-page-edit-url-btn">
  <!--v-if-->
  <!-- @slot Content of the button --> <span class="oc-icon box-content inline-block align-baseline [&amp;_svg]:block size-5.5"><svg data-testid="inline-svg-stub" src="icons/edit-fill.svg" transform-source="(svg) => {
      if (__props.accessibleLabel !== &quot;&quot;) {
        const title = document.createElement(&quot;title&quot;);
        title.setAttribute(&quot;id&quot;, svgTitleId.value);
        title.appendChild(document.createTextNode(__props.accessibleLabel));
        svg.insertBefore(title, svg.firstChild);
      };
      return svg;
    }" aria-hidden="true" focusable="false" class="size-5.5"></svg></span> <span>Edit</span>
</a>"
`;

exports[`account information page > public link context > should render a limited view 1`] = `
"<div id="account-information">
  <div class="flex justify-between items-center w-full">
    <h1 class="mt-0">Account Information</h1>
    <!--v-if-->
  </div>
  <div class="account-table account-page-info mt-6">
    <table data-v-381278b9="" class="oc-table-simple">
      <colgroup>
        <col class="w-auto md:w-[30%]">
        <col class="w-auto md:w-[40%]">
        <col class="w-auto md:w-[30%]">
      </colgroup>
      <thead class="oc-thead border-b sr-only">
        <tr data-v-98c4aba8="">
          <th data-v-27e13406="" data-v-c53469a5="" class="oc-table-cell text-left align-middle oc-th aria-[sort]:cursor-pointer">Information name</th>
          <th data-v-27e13406="" data-v-c53469a5="" class="oc-table-cell text-left align-middle oc-th aria-[sort]:cursor-pointer">Information value</th>
        </tr>
      </thead>
      <tbody>
        <tr data-v-98c4aba8="">
          <td data-v-27e13406="" class="oc-table-cell text-left align-middle oc-td">
            <div>Profile picture</div>
            <div class="text-sm text-role-on-surface-variant">Max. 10MB, JPG, PNG</div>
          </td>
          <td data-v-27e13406="" class="oc-table-cell text-left align-middle oc-td">
            <div class="[&amp;_.cropper-crop-box]:!outline-1 [&amp;_.cropper-crop-box]:!outline-role-outline [&amp;_.cropper-view-box]:!rounded-[50%] [&amp;_.cropper-crop-box]:!rounded-[50%] [&amp;_.cropper-line]:!bg-role-outline [&amp;_.cropper-point]:!bg-role-outline mb-2"><input class="invisible avatar-file-input" type="file" accept="image/jpeg, image/png">
              <div class="flex flex-col items-center"><span class="vue-avatar--wrapper oc-avatar flex justify-center items-center shrink-0 text-center rounded-[50%] select-none mb-4" style="width: 128px; height: 128px; line-height: 128px; background-color: #b82015; font-size: 51px; font-family: Helvetica, Arial, sans-serif; color: white;" width="128" aria-hidden="true" focusable="false" data-test-user-name=""><span class="avatar-initials" style="color: white;"></span></span>
                <div>
                  <div class="oc-button-group"><button type="button" class="oc-button-secondary oc-button-outline oc-button-secondary-outline gap-2 justify-center text-sm min-h-3 oc-button cursor-pointer disabled:opacity-60 disabled:cursor-default">
                      <!--v-if-->
                      <!-- @slot Content of the button --> Upload
                    </button>
                    <!--v-if-->
                  </div>
                </div>
              </div>
              <!--v-if-->
              <!--v-if-->
            </div>
          </td>
        </tr>
        <tr data-v-98c4aba8="" class="account-page-info-username">
          <td data-v-27e13406="" class="oc-table-cell text-left align-middle oc-td">Username</td>
          <td data-v-27e13406="" class="oc-table-cell text-left align-middle oc-td"></td>
        </tr>
        <tr data-v-98c4aba8="" class="account-page-info-displayname">
          <td data-v-27e13406="" class="oc-table-cell text-left align-middle oc-td">First and last name</td>
          <td data-v-27e13406="" class="oc-table-cell text-left align-middle oc-td"></td>
        </tr>
        <tr data-v-98c4aba8="" class="account-page-info-email">
          <td data-v-27e13406="" class="oc-table-cell text-left align-middle oc-td">Email</td>
          <td data-v-27e13406="" class="oc-table-cell text-left align-middle oc-td"><span>No email has been set up</span></td>
        </tr>
        <!--v-if-->
        <tr data-v-98c4aba8="" class="account-page-info-groups">
          <td data-v-27e13406="" class="oc-table-cell text-left align-middle oc-td">Group memberships</td>
          <td data-v-27e13406="" class="oc-table-cell text-left align-middle oc-td" data-testid="group-names"><span data-testid="group-names-empty">You are not part of any group</span></td>
        </tr>
        <!--v-if-->
      </tbody>
    </table>
  </div>
</div>"
`;
